welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() 
{
  var decalage = 0
  var T = creeTableau()
  for (j <- 1 to getMondeLargeur()-1) 
  {
    gauche()
    avance()
    droite()
    decalage=litMessage().toInt
    for (i <- 1 to getMondeHauteur()-1) 
    {
      avance()
      setCouleurBrosse(T(((i+decalage)%getMondeHauteur()-1)))
      peindre()
    }
  }
}

def creeTableau():Array[Color] =
{
  var T = new Array[Color](getMondeHauteur())
  T(0)=getCouleurSol()
  for (i <- 1 to getMondeHauteur()-1) 
  {
    avance()
    T(i)=getCouleurSol()
  }
  recule(getMondeHauteur()-1)
  return T
}

def peindre()
{
  baisseBrosse()
  leveBrosse()
}